# Clarity

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  NOTICE  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  README.md  USER_REQUESTS.md
data/: bible.db
installer/: clarity.iss  package.bat
resources/: Resources.qrc  app.rc
resources/styles/: dark.qss  light.qss
samples/: README.md  amazing-grace.cly  announcements.cly  easter-service.cly  gradient-demo.cly  psalm-23.cly  simple-service.cly  songs.json  style-demo.cly
site/: features.html  index.html
site/css/: style.css
site/js/: main.js
src/: Main.cpp
src/Confidence/: ConfidenceDisplay.cpp  ConfidenceDisplay.h  ConfidenceMain.cpp  ConfidenceMain.h
src/Confidence/qml/: ConfidenceMonitor.qml
src/Control/: ApiBibleScriptureDialog.cpp  ApiBibleScriptureDialog.h  AppStyle.cpp  AppStyle.h  BatchImportDialog.cpp  BatchImportDialog.h  BibleImportDialog.cpp  BibleImportDialog.h  CCLIReportDialog.cpp  CCLIReportDialog.h  ConfidencePreviewWidget.cpp  ConfidencePreviewWidget.h  ControlMain.cpp  ControlMain.h  ControlWindow.cpp  ControlWindow.h  EsvScriptureDialog.cpp  EsvScriptureDialog.h  GradientEditorWidget.cpp  GradientEditorWidget.h  LivePreviewPanel.cpp  LivePreviewPanel.h  LivePreviewWidget.cpp  LivePreviewWidget.h  MediaDrawer.cpp  MediaDrawer.h  MediaLibraryDialog.cpp  MediaLibraryDialog.h  ProcessManager.cpp  ProcessManager.h  ScriptureDialog.cpp  ScriptureDialog.h  ScriptureInsertDialog.cpp  ScriptureInsertDialog.h  SettingsDialog.cpp  SettingsDialog.h  SlideCanvasWidget.cpp  SlideCanvasWidget.h  SlideEditorDialog.cpp  SlideEditorDialog.h  (+18 more)
src/Core/: ApiBibleClient.cpp  ApiBibleClient.h  ApiBibleScriptureItem.cpp  ApiBibleScriptureItem.h  AutoAdvanceTimer.cpp  AutoAdvanceTimer.h  BibleDatabase.cpp  BibleDatabase.h  BibleImporter.cpp  BibleImporter.h  CustomSlideItem.cpp  CustomSlideItem.h  EsvApiClient.cpp  EsvApiClient.h  EsvScriptureItem.cpp  EsvScriptureItem.h  IpcClient.cpp  IpcClient.h  IpcServer.cpp  IpcServer.h  ItemListModel.cpp  ItemListModel.h  MediaLibrary.cpp  MediaLibrary.h  Presentation.cpp  Presentation.h  PresentationItem.cpp  PresentationItem.h  PresentationModel.cpp  PresentationModel.h  QrCode.cpp  QrCode.h  RemoteServer.cpp  RemoteServer.h  ScriptureItem.cpp  ScriptureItem.h  SettingsManager.cpp  SettingsManager.h  Slide.cpp  Slide.h  (+27 more)
src/Ndi/: NdiMain.cpp  NdiMain.h  NdiSender.cpp  NdiSender.h  NdiTypes.h
src/Output/: OutputDisplay.cpp  OutputDisplay.h  OutputMain.cpp  OutputMain.h
src/Output/qml/: OutputDisplay.qml  OutputDisplayContent.qml  OutputDisplayNoVideo.qml
tools/: create_bible_db.py
translations/: clarity_de.ts  clarity_es.ts  clarity_fr.ts
